--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <a class="btn btn-lg btn-bd-light my-2 p-3 px-sm-5" target=" _blank " title="GET IN TOUCH" href="mailto:laxmikantkatre3.14@gmail.com ">Get in touch</a>
         
-        <a class="btn btn-lg btn-bd-light my-2 p-3 px-sm-5" target=" _blank " title="RESUME" href="https://drive.google.com/file/d/1tWz5WdjGoshbl-T0tM-JxHH6DAjPuySo/view?usp=sharing">Resume</a>
+        <a class="btn btn-lg btn-bd-light my-2 p-3 px-sm-5" target=" _blank " title="RESUME" href="https://drive.google.com/file/d/1_SGNE2C5-rrIKvlOI1Ssrk5KDLYA6St0/view?usp=sharing">Resume</a>
         <br><br>
 
         <!-- Social Media Icons -->
@@ -151,8 +151,11 @@
                     <li style="font-weight: lighter;">
                         Rashtrasant Tukadoji Maharaj Nagpur University
                     </li>
+                    <li class="text_bolder">
+                        Percentage (Upto 3rd Semester): 72.70%
+                    </li>
                     <li style="font-weight: lighter;">
-                        Aug 2018 - Present
+                        Aug 2018 - Present (Expected 2021)
                     </li>
                 </ul>
 
@@ -259,15 +262,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="col-sm-6">
-                        <div class="progress">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 50%;">
-                                <span class="skill_progress_title"> Git & GitHub </span>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
@@ -285,13 +279,13 @@
             <ul style="list-style: square; padding-right: 15px;">
 
                 <li class="margin_bottom">
-                    CodeChef Rating : 1807 (4 ⭐ Coder)
+                    Peak rating 1807 (4 ⭐) at Codechef
                 </li>
 
                 <hr class="style-two">
 
                 <li class="margin_bottom">
-                    Globally Ranked 156 in CodeChef May Long Challenge 2020 out of 20,730 coders
+                    Global Rank 156 out of 20730 coders in May 2020 Long Challenge Codechef Division 2
                 </li>
 
                 <hr class="style-two">
@@ -309,7 +303,7 @@
                 <hr class="style-two">
 
                 <li class="margin_bottom">
-                    HackerEarth Rating : 1486
+                    Peak rating 1486 at HackerEarth
                 </li>
 
                 <hr class="style-two">
@@ -427,6 +421,8 @@
                 <i class="fas fa-phone-alt"></i> (+91) 8669707226
                 <br>
                 <i class="fas fa-envelope"></i> laxmikantkatre3.14@gmail.com
+                <br>
+                <i class="fas fa-map-marker-alt"></i> Gondia, Maharashtra
             </p>
 
             <p>
