--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         Rashtrasant Tukadoji Maharaj Nagpur University
                     </li>
                     <li class="text_bolder">
-                        Percentage (Upto 3rd Semester): 72.70%
+                        Percentage (Upto 3rd Semester): 72.85%
                     </li>
                     <li style="font-weight: lighter;">
                         Aug 2018 - Present (Expected 2021)
@@ -166,7 +166,7 @@
                         Higher Secondary School Education
                     </li>
                     <li style="font-weight: lighter;">
-                        Mount Litera Zee School, Gandhidham
+                        Kidzee High School, Gandhidham
                     </li>
                     <li style="font-weight: lighter;">
                         PCM + IT
@@ -186,7 +186,7 @@
                         Secondary School Education
                     </li>
                     <li style="font-weight: lighter;">
-                        Mount Litera Zee School, Gandhidham
+                        Kidzee High School, Gandhidham
                     </li>
                     <li class="text_bolder">
                         10 CGPA | CBSE
@@ -325,7 +325,7 @@
                 <hr class="style-two">
 
                 <li>
-                    School Topper 10th Standard 2016 (Mount Litera Zee School, Gandhidham)
+                    School Topper 10th Standard 2016 (Kidzee High School, Gandhidham)
                     <br> Awarded certificate of merit signed by former education minister Smt. Smriti Irani for scoring 10.0 CGPA in 10th Boards conducted by CBSE
                 </li>
 
