--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <a class="btn btn-lg btn-bd-light my-2 p-3 px-sm-5" target=" _blank " title="GET IN TOUCH" href="mailto:laxmikantkatre3.14@gmail.com ">Get in touch</a>
         
-        <a class="btn btn-lg btn-bd-light my-2 p-3 px-sm-5" target=" _blank " title="RESUME" href="https://drive.google.com/file/d/1TdW4Xijm2EyOMozYM0I5i9MIzAx7TcV5/view?usp=sharing">Resume</a>
+        <a class="btn btn-lg btn-bd-light my-2 p-3 px-sm-5" target=" _blank " title="RESUME" href="https://drive.google.com/file/d/1G1s2OYoJC5pQgCNiUOa-f2OWM8513bbw/view?usp=sharing">Resume</a>
         <br><br>
 
         <!-- Social Media Icons -->
@@ -267,7 +267,7 @@
                     <div class="col-sm-6">
                         <div class="progress">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 37%;">
-                                <span class="skill_progress_title"> C / C++ </span>
+                                <span class="skill_progress_title"> C++ </span>
                             </div>
                         </div>
                     </div>
