--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         Rashtrasant Tukadoji Maharaj Nagpur University
                     </li>
                     <li class="text_bolder">
-                        Percentage (Upto 3rd Semester): 72.85%
+                        Percentage (Upto 4th Semester): 76.35%
                     </li>
                     <li style="font-weight: lighter;">
                         Aug 2018 - Present (Expected 2021)
