--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         Rashtrasant Tukadoji Maharaj Nagpur University
                     </li>
                     <li class="text_bolder">
-                        Percentage (Upto 4th Semester): 76.35%
+                        Percentage (Upto 4th Semester): 75.95%
                     </li>
                     <li style="font-weight: lighter;">
                         Aug 2018 - Present (Expected 2021)
@@ -317,7 +317,19 @@
                 </li>
 
                 <hr class="style-two">
+                
+                <li class="margin_bottom">
+                    All India Rank 3829 in Pre-Qualifier Round of TCS Codevita 2020 out of 0.185 participants
+                </li>
 
+                <hr class="style-two">
+
+                <li class="margin_bottom">
+                    TechGig Code Gladiators 2020 Semi-Finalist
+                </li>
+
+                <hr class="style-two">
+                
                 <li class="margin_bottom">
                     HackerRank : Golden Badge (5 ⭐) in Java & Silver Badge (4 ⭐) in Problem Solving
                 </li>
