--- a/index.html
+++ b/index.html
@@ -319,13 +319,19 @@
                 <hr class="style-two">
                 
                 <li class="margin_bottom">
-                    All India Rank 3829 in Pre-Qualifier Round of TCS Codevita 2020 out of 0.185 participants
+                    All India Rank 3829 in Pre-Qualifier Round of TCS Codevita 2020 out of 0.185 million participants
                 </li>
 
                 <hr class="style-two">
 
                 <li class="margin_bottom">
                     TechGig Code Gladiators 2020 Semi-Finalist
+                </li>
+                
+                <hr class="style-two">
+
+                <li class="margin_bottom">
+                    Qualified the Qualifier Round of Facebook Hacker Cup 2020
                 </li>
 
                 <hr class="style-two">
