--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                     <iconify-icon class="icon_bottom" data-icon="ant-design:github-outlined" data-width="32" data-height="34"></iconify-icon>
                 </a>
 
-                <a target="_blank" title="Instagram" href="https://www.instagram.com/laxmikant_katre/">
+                <a target="_blank" title="Instagram" href="https://www.instagram.com/laxmikantkatre.in/">
                     <iconify-icon class="icon_bottom" data-icon="ant-design:instagram-filled" data-width="32" data-height="34"></iconify-icon>
                 </a>
 
