--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
                         Rashtrasant Tukadoji Maharaj Nagpur University
                     </li>
                     <li class="text_bolder">
-                        Percentage (Upto 4th Semester): 75.95%
+                        Percentage : 79.63%
                     </li>
                     <li style="font-weight: lighter;">
-                        Aug 2018 - Present (Expected 2021)
+                        Aug 2018 - July 2021
                     </li>
                 </ul>
 
