--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
             </div>
 
             <div class="col-md-4 col-lg-3">
-                <img id="image" class="mb-4 mb-md-0 mr-md-5" src="./images/Profile.jpg" alt="Profile Picture" title="Profile Picture">
+                <img id="image" class="mb-4 mb-md-0 mr-md-5" src="./images/Pic.jpg" alt="Profile Picture" title="Profile Picture">
             </div>
 
             <div>
                 <p class="text">
                     Hello, I am Laxmikant, a Passionate Competitive Programmer 💻
-                    <br><br> Currently, I am pursuing B.Sc. in Computer Science, Mathematics and Electronics (ECoM) at <a id="college" target="_blank" href="https://www.dbscience.org/">Dhote Bandhu Science College, Gondia</a> affiliated to RTM Nagpur
+                    <br><br> I did my B.Sc. degree in Computer Science, Mathematics and Electronics (ECoM) from <a id="college" target="_blank" href="https://www.dbscience.org/">Dhote Bandhu Science College, Gondia</a> affiliated to RTM Nagpur
                     University.
                     <br><br> I am Tech Enthusiast who desires to learn and explore technical & problem-solving skills. I have an interest in solving various algorithmic and mathematical related problems. I do participate in regular programming contests
                     that are held at various online competitive programming platforms.
