--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 
     <div class="jumbotron text-center">
         <h4>Hello 👋, I am <span id="name_bold">Laxmikant Katre</span></h4>
-        <h5 class="jumbotron-space">Competitive Programmer 👨‍💻</h5>
+        <h5 class="jumbotron-space">Associate Analyst @ Deloitte Consulting 👨‍💻</h5>
 
         <a class="btn btn-lg btn-bd-light my-2 p-3 px-sm-5" target=" _blank " title="GET IN TOUCH" href="mailto:laxmikantkatre3.14@gmail.com ">Get in touch</a>
         
-        <a class="btn btn-lg btn-bd-light my-2 p-3 px-sm-5" target=" _blank " title="RESUME" href="https://drive.google.com/file/d/1G1s2OYoJC5pQgCNiUOa-f2OWM8513bbw/view?usp=sharing">Resume</a>
+        <a class="btn btn-lg btn-bd-light my-2 p-3 px-sm-5" target=" _blank " title="RESUME" href="https://drive.google.com/file/d/1iPB3PiATc13epFgyHEXKtH6LjvJM7wf0/view?usp=sharing">Resume</a>
         <br><br>
 
         <!-- Social Media Icons -->
@@ -116,13 +116,13 @@
             </div>
 
             <div class="col-md-4 col-lg-3">
-                <img id="image" class="mb-4 mb-md-0 mr-md-5" src="./images/Pic.jpg" alt="Profile Picture" title="Profile Picture">
+                <img id="image" class="mb-4 mb-md-0 mr-md-5" src="./images/Profile_pic.jpeg" alt="Profile Picture" title="Profile Picture">
             </div>
 
             <div>
                 <p class="text">
-                    Hello, I am Laxmikant, a Passionate Competitive Programmer 💻
-                    <br><br> I did my B.Sc. degree in Computer Science, Mathematics and Electronics (ECoM) from <a id="college" target="_blank" href="https://www.dbscience.org/">Dhote Bandhu Science College, Gondia</a> affiliated to RTM Nagpur
+                    Hello, I am Laxmikant, a working professional at Deloitte. I am new to corporate world and learning how things work here 💻
+                    <br><br> I have a Bachelors degree in Computer Science, Mathematics and Electronics (ECoM) from <a id="college" target="_blank" href="https://www.dbscience.org/">Dhote Bandhu Science College, Gondia</a> affiliated to RTM Nagpur
                     University.
                     <br><br> I am Tech Enthusiast who desires to learn and explore technical & problem-solving skills. I have an interest in solving various algorithmic and mathematical related problems. I do participate in regular programming contests
                     that are held at various online competitive programming platforms.
